--- a/daily_task6/Buttons/style.css
+++ b/daily_task6/Buttons/style.css
@@ -1,21 +1,43 @@
 .fbtn {
   text-decoration: none;
   padding: 5px 15px;
-  background-color: rgb(15, 157, 218);
+  background-image: linear-gradient(
+    45deg,
+    rgb(242, 1, 146) 0%,
+    rgb(242, 1, 146) 14.286%,
+    rgb(205, 4, 143) 14.286%,
+    rgb(205, 4, 143) 28.572%,
+    rgb(168, 6, 140) 28.572%,
+    rgb(168, 6, 140) 42.858%,
+    rgb(132, 9, 137) 42.858%,
+    rgb(132, 9, 137) 57.144%,
+    rgb(95, 12, 134) 57.144%,
+    rgb(95, 12, 134) 71.43%,
+    rgb(58, 14, 131) 71.43%,
+    rgb(58, 14, 131) 85.716%,
+    rgb(21, 17, 128) 85.716%,
+    rgb(21, 17, 128) 100.002%
+  );
   color: white;
   border: 1px solid rgb(15, 157, 218);
   border-radius: 5px;
+  transition: all 0.3s ease-in-out;
 }
 .sbtn {
-    display: inline-block;
+  display: inline-block;
   text-decoration: none;
   margin-top: 30px;
   padding: 5px 15px;
   color: white;
-  background: #3F5EFB;
-background: radial-gradient(circle, rgba(63, 94, 251, 1) 0%, rgba(252, 70, 107, 1) 100%);
+  background: #3f5efb;
+  background: radial-gradient(
+    circle,
+    rgba(63, 94, 251, 1) 0%,
+    rgba(252, 70, 107, 1) 100%
+  );
   border: 1px solid transparent;
   border-radius: 5px;
+  transition: all 0.3s ease-in-out;
 }
 .tbtn {
   display: inline-block;
@@ -24,9 +46,14 @@ background: radial-gradient(circle, rgba(63, 94, 251, 1) 0%, rgba(252, 70, 107, 
   padding: 5px 15px;
   color: white;
   background: #ff99e9;
-background: radial-gradient(circle, rgba(255, 153, 233, 1) 0%, rgba(128, 151, 255, 1) 100%);
+  background: radial-gradient(
+    circle,
+    rgba(255, 153, 233, 1) 0%,
+    rgba(128, 151, 255, 1) 100%
+  );
   border: 1px solid transparent;
   border-radius: 5px;
+  transition: all 0.3s ease-in-out;
 }
 .frbtn {
   display: inline-block;
@@ -38,4 +65,5 @@ background: radial-gradient(circle, rgba(255, 153, 233, 1) 0%, rgba(128, 151, 25
   border: 1px solid black;
   border-radius: 5px;
   box-shadow: 2px 2px 2px black;
+  transition: all 0.3s ease-in-out;
 }
