--- a/daily_task7/style.css
+++ b/daily_task7/style.css
@@ -159,40 +159,276 @@ p {
   background-color: #fff;
   padding: 10px 40px;
   border-radius: 30px;
-  border: 5px solid #ccc ;
+  border: 5px solid #ccc;
   position: relative;
 }
-.k{
-  bottom:150px;
+.k {
+  bottom: 150px;
 }
-.capuccino{
-  bottom:420px;
+.capuccino {
+  bottom: 420px;
   left: 800px;
 }
-.rate{
-    bottom: 330px;
-    left: 680px;
+.rate {
+  bottom: 330px;
+  left: 680px;
 }
-.popular h1{
+.popular h1 {
   position: relative;
-  bottom:400px;
+  bottom: 400px;
   font-size: 30px;
 }
-.popular h1 img{
+.popular h1 img {
   position: relative;
-  top:15px;
-  right:77px;
+  top: 15px;
+  right: 77px;
 }
-.bgnd{
-  width:75vw;
-  height: 300px;
+.bgnd {
   margin-left: 12.5%;
-  background-color: rgb(242,211,165);
-  border-radius: 100px;
   position: relative;
   bottom: 250px;
 }
-.card1{
+.card1 {
+  background-color: #fff;
+  border: 5px solid #ccc;
+  width: 350px;
+  height: 400px;
+  position: absolute;
+  left: 305px;
+  top: 800px;
+}
+.card1 .card-text {
+  position: relative;
+  top: 280px;
+  right: 130px;
+}
+.card1 .img-box {
+  position: relative;
+  bottom: 165px;
+  left: 15px;
+}
+.card1 .img-box h1 {
+  display: inline-block;
+  font-size: 20px;
+  padding: 7px 15px;
+  background-color: #fff;
+  border-radius: 20px;
+  border: 5px solid #ccc;
+  position: relative;
+  top: 60px;
+  right: 115px;
+}
+.card1 .card-text h1 {
+  position: relative;
+  bottom: 576px;
+  left: 10px;
+  font-size: 27px;
+  font-weight: 600;
+}
+.card1 .card-text p {
+  position: relative;
+  bottom: 645px;
+  left: 270px;
+  font-size: 25px;
+  font-weight: 700;
+  color: rgb(47, 33, 5);
+}
+.card1 .tags a {
+  text-decoration: none;
+  padding: 10px 15px;
+  color: #ff902a;
+  border: 2px solid #ff902a;
+  border-radius: 10px;
+  position: relative;
+  bottom: 335px;
+  left: 15px;
+}
+.card1 .tags img {
+  position: relative;
+  bottom: 321px;
+  left: 130px;
+}
+.card2 {
+  background-color: #fff;
+  border: 5px solid #ccc;
+  width: 350px;
+  height: 400px;
+  position: absolute;
+  left: 680px;
+  top: 800px;
+}
+.card2 .card-text {
+  position: relative;
+  top: 280px;
+  right: 130px;
+}
+.card2 .img-box {
+  position: relative;
+  bottom: 165px;
+  left: 15px;
+}
+.card2 .img-box h1 {
+  display: inline-block;
+  font-size: 20px;
+  padding: 7px 15px;
+  background-color: #fff;
+  border-radius: 20px;
+  border: 5px solid #ccc;
+  position: relative;
+  top: 60px;
+  right: 115px;
+}
+.card2 .card-text h1 {
+  position: relative;
+  bottom: 576px;
+  left: 10px;
+  font-size: 27px;
+  font-weight: 600;
+}
+.card2 .card-text p {
+  position: relative;
+  bottom: 645px;
+  left: 270px;
+  font-size: 25px;
+  font-weight: 700;
+  color: rgb(47, 33, 5);
+}
+.card2 .tags a {
+  text-decoration: none;
+  padding: 10px 15px;
+  color: #ff902a;
+  border: 2px solid #ff902a;
+  border-radius: 10px;
+  position: relative;
+  bottom: 335px;
+  left: 15px;
+}
+.card2 .tags img {
+  position: relative;
+  bottom: 321px;
+  left: 130px;
+}
+.card3 {
+  background-color: #fff;
+  border: 5px solid #ccc;
+  width: 350px;
+  height: 400px;
+  position: absolute;
+  left: 1050px;
+  top: 800px;
+}
+.card3 .card-text {
+  position: relative;
+  top: 280px;
+  right: 130px;
+}
+.card3 .img-box {
+  position: relative;
+  bottom: 165px;
+  left: 15px;
+}
+.card3 .img-box h1 {
+  display: inline-block;
+  font-size: 20px;
+  padding: 7px 15px;
+  background-color: #fff;
+  border-radius: 20px;
+  border: 5px solid #ccc;
+  position: relative;
+  top: 60px;
+  right: 115px;
+}
+.card3 .card-text h1 {
+  position: relative;
+  bottom: 576px;
+  left: 10px;
+  font-size: 27px;
+  font-weight: 600;
+}
+.card3 .card-text p {
+  position: relative;
+  bottom: 645px;
+  left: 270px;
+  font-size: 25px;
+  font-weight: 700;
+  color: rgb(47, 33, 5);
+}
+.card3 .tags a {
+  text-decoration: none;
+  padding: 10px 15px;
+  color: #ff902a;
+  border: 2px solid #ff902a;
+  border-radius: 10px;
+  position: relative;
+  bottom: 335px;
+  left: 15px;
+}
+.card3 .tags img {
+  position: relative;
+  bottom: 321px;
+  left: 130px;
+}
+.delivery-card {
+  display: flex;
+  position: absolute;
+  top: 1400px;
+}
 
+.howto {
+  color: black;
+  font-size: 32px;
+  position: relative;
+  bottom: 340px;
+}
 
+.firstdev img {
+  position: relative;
+  left: 170px;
+}
+.firstdev h1 {
+  font-size: 25px;
+  position: relative;
+  bottom: 80px;
+}
+.firstdev p {
+  font-size: 25px;
+  position: relative;
+  right: 45px;
+  bottom: 80px;
+  color:black;
+}
+
+.seconddev img {
+  position: relative;
+  left: 170px;
+}
+.seconddev h1 {
+  font-size: 25px;
+  position: relative;
+  bottom: 80px;
+  right: 10px;
+}
+.seconddev p {
+  font-size: 25px;
+  position: relative;
+  right: 35px;
+  bottom: 80px;
+  color:black;
+}
+
+.thirddev img {
+  position: relative;
+  left: 170px;
+}
+.thirddev h1 {
+  font-size: 25px;
+  position: relative;
+  bottom: 80px;
+}
+.thirddev p {
+  font-size: 25px;
+  position: relative;
+  right: 35px;
+  bottom: 80px;
+  color:black;
 }
