--- a/Second Assignment/style2.css
+++ b/Second Assignment/style2.css
@@ -7,11 +7,7 @@
 
 .hero {
   background-color: #f3fcf7;
-  width: 100%;
-  height: 30.5rem;
-}
-nav img {
-  display: none;
+  height: 75vh;
 }
 nav ul {
   display: flex;
@@ -39,8 +35,8 @@ nav li:hover {
   color: #06c167;
   border-bottom: 0.16rem solid #06c167;
 }
-.textmobile {
-  display: none;
+.content {
+  display: flex;
 }
 .content .text h1 {
   font-size: 3.75rem;
@@ -72,9 +68,9 @@ nav li:hover {
 
 .pucchi {
   width: 16rem;
-  position: absolute;
-  right: 18rem;
-  top: 10rem;
+  position: relative;
+  left: 12rem;
+  top: 2.4rem;
 }
 .rating1 {
   position: absolute;
@@ -234,6 +230,7 @@ nav li:hover {
 }
 .tile h4 {
   font-size: 1.6rem;
+  font-size: 1.6rem;
   color: #06c167;
 }
 .tile p {
@@ -266,7 +263,7 @@ nav li:hover {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
   width: 80%;
-  margin: 0 auto;
+  margin-left: 10%;
   justify-content: center;
 }
 .features .boxes .box {
@@ -298,6 +295,7 @@ nav li:hover {
   border-radius: 0.25rem;
   font-size: 0.9rem;
   font-weight: 500;
+  margin-top: 1.5rem;
 }
 .product-text h1 {
   font-size: 0.8rem;
@@ -386,7 +384,7 @@ nav li:hover {
 .footer-content {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  width: 80%;
+  width:80%;
   margin: 0 auto;
 }
 
@@ -404,7 +402,7 @@ nav li:hover {
 }
 .col-brand p {
   font-size: 0.7rem;
-  color: black;
+  color:black;
   margin-bottom: 1.2rem;
   max-width: 16rem;
 }
@@ -431,7 +429,7 @@ nav li:hover {
 
 .col-contact p {
   font-size: 0.7rem;
-  color: black;
+  color:black;
   margin-bottom: 1.2rem;
   max-width: 16rem;
 }
@@ -469,83 +467,3 @@ nav li:hover {
   margin-top: 1.6rem;
   font-size: 0.7rem;
 }
-/*@media (max-width: 768px) {
-  .textmobile {
-    display: block;
-    text-align: center;
-    justify-content: center;
-  }
-  .textmobile >h1{
-    font-size: 3rem;
-    font-weight: 500;
-    margin-top: 5rem;
-  }
-  .text{
-    display: none;
-  }
-  nav h3 {
-    font-size: 3rem;
-  }
-  nav ul {
-    display: none;
-  }
-  nav img {
-    display: inline-block;
-    margin-top: 4%;
-    margin-left: 20rem;
-  }
-  .content .text h1 {
-  font-size: 3.75rem;
-  font-weight: 700;
-  margin-top: 5rem;
-  margin: 0 auto;
-}
-.content .text p {
-  font-size: 0.8rem;
-  font-weight: 400;
-  margin: 1rem 8rem;
-  color: #555555;
-}
-.content .text a {
-  display: inline-block;
-  background-color: #06c167;
-  color: white;
-  text-decoration: none;
-  padding: 1rem 1.5rem;
-  border-radius: 0.25rem;
-  font-size: 0.9rem;
-  font-weight: 500;
-  margin-top: 1.5rem;
-  margin-left: 8rem;
-}
-  .pucchi {
-    width: 16rem;
-    position: relative;
-    left: 16rem;
-  }
-  .rating1 {
-    position: absolute;
-    background-color: white;
-    color: black;
-    text-decoration: none;
-    padding: 0.8rem;
-    border-radius: 2.5rem;
-    font-size: 1rem;
-    font-weight: 500;
-    margin-bottom: 0.5rem;
-  }
-  .rating2 {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-    background-color: white;
-    color: black;
-    text-decoration: none;
-    padding: 0.8rem;
-    border-radius: 2.5rem;
-    font-size: 1rem;
-    font-weight: 500;
-  }
-}
-*/
