--- a/Second Assignment/style.css
+++ b/Second Assignment/style.css
@@ -79,12 +79,12 @@ nav li:hover {
 .content .text a i {
   margin-left: 0.75rem;
 }
-/*
+
 .pucchi {
   width: 16rem;
-  /* position: absolute;
+  position: absolute;
   right: 18rem;
-  top: 2rem;
+  top: 10rem;
 }
 
 
@@ -481,7 +481,7 @@ nav li:hover {
   margin-top: 1.6rem;
   font-size: 0.7rem;
 }
-*/
+
 @media(max-width: 768px) {
   .container{
     display: flex;
