--- a/Third Assignment/src/input.css
+++ b/Third Assignment/src/input.css
@@ -1,1 +1,29 @@
 @import "tailwindcss";
+
+@font-face {
+    font-family: Google Sans;
+    src: url("../src/Fonts/GoogleSans-Regular.ttf");
+}
+@theme{
+    --font-google: Google Sans,"sans-serif";
+    --breakpoint-md:838px;
+    --breakpoint-md-hero:986px;
+    --breakpoint-md-skill:690px;
+}
+@layer components {
+    .btn{
+        background-color: #d5fbe2;
+        padding: 1rem 1.5rem;
+        border-radius: 20px;
+    }
+    .container{
+        margin: 2.5rem;
+        padding:0.5rem;
+        text-align:justify;
+        background-color: oklch(96.2% 0.018 272.314);
+        border-radius: 1rem;
+    }
+    .container:hover{
+        background-color: oklch(87% 0.065 274.039);    
+    }
+}
