Final Change before the hosting

--- a/Third Assignment/src/input.css
+++ b/Third Assignment/src/input.css
@@ -59,9 +59,11 @@
   @media (max-width: 986px) {
     .navbar {
       display: block;
+      width: 100vw;
     }
     .foot{
         text-align: center;
+        width: 100vw;
     }
   }
 }
