--- a/Third Assignment/src/output.css
+++ b/Third Assignment/src/output.css
@@ -23,6 +23,7 @@
     --color-indigo-500: oklch(58.5% 0.233 277.117);
     --color-violet-500: oklch(60.6% 0.25 292.717);
     --color-violet-600: oklch(54.1% 0.281 293.009);
+    --color-violet-700: oklch(49.1% 0.27 292.581);
     --color-violet-900: oklch(38% 0.189 293.745);
     --color-purple-100: oklch(94.6% 0.033 307.174);
     --color-purple-400: oklch(71.4% 0.203 305.504);
@@ -646,6 +647,43 @@
         --tw-shadow: 4px 4px 10px 0px var(--tw-shadow-color, #ffb066);
         box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
       }
+    }
+  }
+  .focus\:outline-offset-2 {
+    &:focus {
+      outline-offset: 2px;
+    }
+  }
+  .focus\:outline-violet-500 {
+    &:focus {
+      outline-color: var(--color-violet-500);
+    }
+  }
+  .active\:border {
+    &:active {
+      border-style: var(--tw-border-style);
+      border-width: 1px;
+    }
+  }
+  .active\:border-b {
+    &:active {
+      border-bottom-style: var(--tw-border-style);
+      border-bottom-width: 1px;
+    }
+  }
+  .active\:border-b-\[\#ffb066\] {
+    &:active {
+      border-bottom-color: #ffb066;
+    }
+  }
+  .active\:border-b-\[4px_4px_10px_0px_\#ffb066\] {
+    &:active {
+      border-bottom-color: 4px 4px 10px 0px #ffb066;
+    }
+  }
+  .active\:bg-violet-700 {
+    &:active {
+      background-color: var(--color-violet-700);
     }
   }
   .max-md-hero\:mt-8 {
